# asxiuxiu_obsidian_repo

./: .engine-source-config copy  .gitattributes  .gitignore  .tmp_platform_preview.json  .tmp_skeleton.md  .tmp_src_0.md  .tmp_src_1.md  .tmp_src_2.md  AGENTS.md  CLAUDE.md  README.md  filelist.txt  kimi-export-session_-20260601-134619.md  parse_crates.py  parse_internal.py  quartz.config.yaml  quartz.ts  setup-claude-links.ps1  stderr.txt  test_backticks.md  test_large.md  test_layout.cpp  test_pack.cpp  test_simple.md  test_vptr.cpp  引擎实现规划.md  算法打卡.md  规划.md
.claude/: claudian-settings.json  settings.json  settings.local.json
.obsidian/: appearance.json  community-plugins.json
C++/: C++ noexcept 关键字.md  C++类型转换.md  C++编译过程原理.md  C++编译选项.md  GDB调试指南.md  Visual Studio PDB 文件锁定问题.md  构建系统：make 与 CMake.md  调试器INT3断点插入的位置详解.md  静态库与动态库.md
GameLearn/: 引擎脚本构建分析.md
Math/: 3Blue1Brown-线性代数的本质-完整笔记.md
Notes/: README.md
Plan/: 从零到入土的图形学学习.md  知识导航中心.md  算法打卡.md  费曼学习法.md
Self/: README.md
graphics/: 1. 图形学概览 Overview of Computer Graphics.md  (+5 more)
workspace/C++/make-cmake/: .gitignore  CMakeLists.txt  Makefile  README.md
workspace/C++/make-cmake/include/: utils.h
workspace/C++/make-cmake/libs/mymath/: CMakeLists.txt
workspace/C++/make-cmake/libs/mymath/include/: mymath.h
workspace/C++/make-cmake/libs/mystr/: CMakeLists.txt
workspace/C++/make-cmake/libs/mystr/include/: mystr.h
workspace/C++/make-cmake/src/: main.cpp  math.cpp  utils.cpp
workspace/algo-practice/: CMakeLists.txt  README.md
workspace/algo-practice/day01_two_sum/: CMakeLists.txt  main.cpp  solution.cpp  solution.h
workspace/algo-practice/day02_contains-duplicate/: solution.cpp  solution.h
workspace/algo-practice/day02_contains_duplicate/: CMakeLists.txt  main.cpp  solution.cpp
workspace/algo-practice/day03_valid_anagram/: CMakeLists.txt  main.cpp  solution.cpp  solution.h
workspace/algo-practice/day04_group_anagrams/: CMakeLists.txt  main.cpp  solution.cpp  solution.h
workspace/algo-practice/include/: common.h
workspace/build-system-demo/_engine/source/renderer/: CMakeLists.txt  renderer.cpp
workspace/build-system-demo/_game/source/client/: CMakeLists.txt  client.cpp
workspace/build-system-demo/_game/source/server/: CMakeLists.txt  server.cpp
workspace/build-system-demo/_plugin/source/physics/: CMakeLists.txt  physics.cpp
workspace/build-system-demo/launch/templates/: CMakeLists.txt  main.cpp  proxy_cmakelists.txt.in
workspace/build-system-demo/launch/templates/cmake/: json_parser.cmake
workspace/cpp-recovery/: C++基础恢复70天计划.md  CMakeLists.txt  PROGRESS.md  README.md
workspace/cpp-recovery/.agents/skills/cpp-practice-hint/: SKILL.md
workspace/cpp-recovery/.agents/skills/cpp-practice-orchestrator/: SKILL.md
workspace/cpp-recovery/.agents/skills/cpp-practice-planner/: SKILL.md
workspace/cpp-recovery/.agents/skills/cpp-practice-tracker/: SKILL.md
workspace/cpp-recovery/.practice-tracker/: .gitignore  state.json
workspace/cpp-recovery/.practice-tracker/archive/: day01_2026-06-03.jsonl.enc
workspace/cpp-recovery/.zed/: debug.json  settings.json  tasks.json
workspace/cpp-recovery/build-asan/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
workspace/cpp-recovery/build-asan/week01/: cmake_install.cmake
workspace/cpp-recovery/build-asan/week01/day01_string_basic/: cmake_install.cmake
workspace/cpp-recovery/build-asan/week01/day02_string_copy/: cmake_install.cmake
workspace/cpp-recovery/include/: common.h
workspace/cpp-recovery/phase01/ex01_file_guard/: CMakeLists.txt  main.cpp
workspace/cpp-recovery/scripts/: build_asan.py  gdb_dap.py  run_current.py  session_tool.py
workspace/cpp-recovery/week01/: CMakeLists.txt
workspace/cpp-recovery/week01/day01_string_basic/: CMakeLists.txt  main.cpp
workspace/cpp-recovery/week01/day02_string_copy/: CMakeLists.txt  main.cpp
workspace/cpp-recovery/week01/day03_string_move/: CMakeLists.txt  main.cpp
workspace/cpp-recovery/week01/day04_array_template/: CMakeLists.txt  main.cpp
workspace/first-opengl-triangle/: .gitignore  CMakeLists.txt  README.md  build.sh
workspace/first-opengl-triangle/.zed/: settings.json  tasks.json
workspace/first-opengl-triangle/include/glad/: glad.h
workspace/first-opengl-triangle/src/: glad.c  main.cpp
workspace/graphic-pipeline/: CMakeLists.txt  conanfile.txt  main.cpp  obj_loader.cpp  obj_loader.hpp
workspace/graphics/: CMakeLists.txt  gradient.ppm  image.ppm  line_bresenham_fpe.ppm  line_bresenham_high.ppm  line_bresenham_low.ppm  line_floating_point_error.ppm  line_k_gt_1.ppm  line_naive.ppm  red_triangle_optimized.ppm  triangle_edge_function_rgb.ppm
workspace/graphics/pixel-demo/: CMakeLists.txt  main.cpp
workspace/graphics/rasterization/: CMakeLists.txt
workspace/graphics/rasterization/src/: image.h  main.cpp  math.h  rasterizer.h
workspace/graphics/tools/: sync_launch_from_cmake.py
workspace/make-cmake/: CMakeLists.txt  README.md
workspace/make-cmake/include/: mymath.h
workspace/make-cmake/libs/mymath/src/: mymath.cpp
workspace/make-cmake/libs/mystr/src/: mystr.cpp
workspace/make-cmake/src/: main.cpp
workspace/os-lab/concurrency-cmake/: CMakeLists.txt  README.md
workspace/os-lab/concurrency-cmake/01_process_vs_thread/: main.cpp
workspace/os-lab/concurrency-cmake/02_first_thread/: main.cpp
workspace/os-lab/concurrency-cmake/03.5_compile_affect/: main.cpp
workspace/os-lab/concurrency-cmake/03_data_race/: main.cpp
workspace/os-lab/concurrency-cmake/04_atomic/: main.cpp
workspace/os-lab/concurrency-cmake/05_mutex/: main_deadlock.cpp  main_mutex_queue.cpp
workspace/os-lab/concurrency-cmake/06_spinlock/: main.cpp
workspace/os-lab/concurrency-cmake/07_condition_variable/: main_cv.cpp  main_cv_vs_busywait.cpp
workspace/os-lab/concurrency-cmake/08_memory_order/: main_acquire_release.cpp  main_fence_bench.cpp
workspace/os-lab/concurrency-cmake/09_release_acquire/: main_ra_correctness.cpp  main_ra_gamestate.cpp
workspace/os-lab/concurrency-cmake/10_lockfree_queue/: main.cpp  spsc_queue.hpp
(+774 files in other folders)
